Fix dl white spaces

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -110,15 +110,12 @@ dl {
 dt {
   color: $color-dark-light;
   font-weight: bolder;
+  margin-bottom: $margin-tiny;
 }
 
 dd {
   margin-left: $indent;
-
-  + dd,
-  + dt {
-    margin-bottom: $margin-tiny;
-  }
+  margin-bottom: $margin-tiny;
 }
 
 figure {
